Port legacy registries recipes networking and machine states to NeoForge 1.21.1